--- a/index.html
+++ b/index.html
@@ -3,9 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Alphabet Crash Game</title>
 </head>
-<body>
+<body class="bg-[#010313] min-h-screen bg-[url('./images/background.png')] bg-no-repeat bg-center">
+    <main>
+        <!-- home screen -->
+        <section class="home  text-white flex border items-center min-h-screen justify-center">
+            <div class=" flex flex-col items-center gap-4" >
+                <h1 class="text-8xl font-extrabold">ALPHABET CLASH</h1>
+                <p class="text-2xl font-medium">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <button class="btn bg-white text-black hover:text-white">Play Now</button>
+            </div>
+        </section>
+         <!-- playground screen start -->
+        <section class="play-ground min-h-screen">
+            <div>
+                <!-- display -->
+                <div>
+                    <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313cc] bg-[#ffffffb3] "><div><p>Don't watch keyboard  while playing...</p></div></div>
+                </div>
+                <!-- Keyboard start-->
+                <div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">q</kbd>
+                        <kbd class="kbd">w</kbd>
+                        <kbd class="kbd">e</kbd>
+                        <kbd class="kbd">r</kbd>
+                        <kbd class="kbd">t</kbd>
+                        <kbd class="kbd">y</kbd>
+                        <kbd class="kbd">u</kbd>
+                        <kbd class="kbd">i</kbd>
+                        <kbd class="kbd">o</kbd>
+                        <kbd class="kbd">p</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">a</kbd>
+                        <kbd class="kbd">s</kbd>
+                        <kbd class="kbd">d</kbd>
+                        <kbd class="kbd">f</kbd>
+                        <kbd class="kbd">g</kbd>
+                        <kbd class="kbd">h</kbd>
+                        <kbd class="kbd">j</kbd>
+                        <kbd class="kbd">k</kbd>
+                        <kbd class="kbd">l</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">z</kbd>
+                        <kbd class="kbd">x</kbd>
+                        <kbd class="kbd">c</kbd>
+                        <kbd class="kbd">v</kbd>
+                        <kbd class="kbd">b</kbd>
+                        <kbd class="kbd">n</kbd>
+                        <kbd class="kbd">m</kbd>
+                        <kbd class="kbd">/</kbd>
+                      </div>
+                </div>
+                <!-- Keyboard end-->
+                <!-- score -->
+                <div>
+                    <button class="btn px-4 bg-purple-700 rounded-full text-white">
+                        Life
+                        <img src="./images/hart.svg" alt="">
+                        <span ></span>
+                      </button>
+                    <button class="btn px-4 bg-purple-700 rounded-full text-white">
+                        Score 
+                        <img src="./images/doller.svg" alt="">
+                        <span ></span>
+                      </button>
+                </div>
+            </div>
+        </section>
+        <!-- playground screen end  -->
+        <section class="score">
     
+        </section>
+    </main>
 </body>
 </html>
