3rd Time commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,59 +11,64 @@
 <body class="bg-[#010313] min-h-screen bg-[url('./images/background.png')] bg-no-repeat bg-center">
     <main>
         <!-- home screen -->
-        <section class="home  text-white flex border items-center min-h-screen justify-center">
+        <section id="home-screen" class=" text-white flex border items-center min-h-screen justify-center">
             <div class=" flex flex-col items-center gap-4" >
                 <h1 class="text-8xl font-extrabold">ALPHABET CLASH</h1>
                 <p class="text-2xl font-medium">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-                <button class="btn bg-white text-black hover:text-white">Play Now</button>
+                <button onclick="play()" class="btn bg-white text-black hover:text-white">Play Now</button>
             </div>
         </section>
          <!-- playground screen start -->
-        <section class="play-ground min-h-screen">
-            <div>
+        <section id="play-ground" class=" min-h-screen hidden">
+            <div class="flex flex-col items-center gap-5 pt-5">
                 <!-- display -->
                 <div>
-                    <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313cc] bg-[#ffffffb3] "><div><p>Don't watch keyboard  while playing...</p></div></div>
+                    <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313cc] bg-[#ffffffb3]"><div class="flex justify-center "><p class="bg-[#2F2941]  px-8 pb-4 rounded-b-xl text-white">Don't watch keyboard  while playing...</p></div>
+                    <div class="flex justify-center items-center h-full">
+                        <p id="current-alphabet" class="text-black text-6xl font-bold uppercase">h</p>
+                    </div>
+                </div>
+                        
                 </div>
                 <!-- Keyboard start-->
                 <div>
                     <div class="flex justify-center gap-1 my-1 w-full">
-                        <kbd class="kbd">q</kbd>
-                        <kbd class="kbd">w</kbd>
-                        <kbd class="kbd">e</kbd>
-                        <kbd class="kbd">r</kbd>
-                        <kbd class="kbd">t</kbd>
-                        <kbd class="kbd">y</kbd>
-                        <kbd class="kbd">u</kbd>
-                        <kbd class="kbd">i</kbd>
-                        <kbd class="kbd">o</kbd>
-                        <kbd class="kbd">p</kbd>
+                        <kbd id="q" class="kbd">q</kbd>
+                        <kbd id="w" class="kbd">w</kbd>
+                        <kbd id="e" class="kbd">e</kbd>
+                        <kbd id="r" class="kbd">r</kbd>
+                        <kbd id="t" class="kbd">t</kbd>
+                        <kbd id="y" class="kbd">y</kbd>
+                        <kbd id="u" class="kbd">u</kbd>
+                        <kbd id="i" class="kbd">i</kbd>
+                        <kbd id="o" class="kbd">o</kbd>
+                        <kbd id="p" class="kbd">p</kbd>
                       </div> 
                       <div class="flex justify-center gap-1 my-1 w-full">
-                        <kbd class="kbd">a</kbd>
-                        <kbd class="kbd">s</kbd>
-                        <kbd class="kbd">d</kbd>
-                        <kbd class="kbd">f</kbd>
-                        <kbd class="kbd">g</kbd>
-                        <kbd class="kbd">h</kbd>
-                        <kbd class="kbd">j</kbd>
-                        <kbd class="kbd">k</kbd>
-                        <kbd class="kbd">l</kbd>
+                        <kbd id="a" class="kbd">a</kbd>
+                        <kbd id="s" class="kbd">s</kbd>
+                        <kbd id="d" class="kbd">d</kbd>
+                        <kbd id="f" class="kbd">f</kbd>
+                        <kbd id="g" class="kbd">g</kbd>
+                        <kbd id="h" class="kbd">h</kbd>
+                        <kbd id="j" class="kbd">j</kbd>
+                        <kbd id="k" class="kbd">k</kbd>
+                        <kbd id="l" class="kbd">l</kbd>
                       </div> 
                       <div class="flex justify-center gap-1 my-1 w-full">
-                        <kbd class="kbd">z</kbd>
-                        <kbd class="kbd">x</kbd>
-                        <kbd class="kbd">c</kbd>
-                        <kbd class="kbd">v</kbd>
-                        <kbd class="kbd">b</kbd>
-                        <kbd class="kbd">n</kbd>
-                        <kbd class="kbd">m</kbd>
+                        <kbd id="z" class="kbd">z</kbd>
+                        <kbd id="x" class="kbd">x</kbd>
+                        <kbd id="c" class="kbd">c</kbd>
+                        <kbd id="v" class="kbd">v</kbd>
+                        <kbd id="b" class="kbd">b</kbd>
+                        <kbd id="n" class="kbd">n</kbd>
+                        <kbd id="m" class="kbd">m</kbd>
                         <kbd class="kbd">/</kbd>
                       </div>
                 </div>
                 <!-- Keyboard end-->
                 <!-- score -->
-                <div>
+                <div class="flex justify-around w-3/5">
                     <button class="btn px-4 bg-purple-700 rounded-full text-white">
                         Life
                         <img src="./images/hart.svg" alt="">
@@ -78,9 +83,18 @@
             </div>
         </section>
         <!-- playground screen end  -->
-        <section class="score">
-    
+        <section class="score flex justify-center items-center min-h-screen hidden">
+            <div class="text-center gap-10 space-y-6 bg-[#ffffff33] p-10 rounded-xl">
+                <h1 class="text-7xl text-white">
+                    <span class="font-extrabold">Score:</span>
+                    <span>14</span>
+                </h1>
+                <button class="btn ">Play Again</button>
+                <p class="text-white text-xl">Practice make you a Pro</p>
+            </div>
         </section>
     </main>
+    <script src="./script/utility.js"></script>
+    <script src="./script/alphabet.js"></script>
 </body>
 </html>
