--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
                     <button class="btn px-4 bg-purple-700 rounded-full text-white">
                         Life
                         <img src="./images/hart.svg" alt="">
-                        <span ></span>
+                        <span id="current-life">5</span>
                       </button>
                     <button class="btn px-4 bg-purple-700 rounded-full text-white">
                         Score 
                         <img src="./images/doller.svg" alt="">
-                        <span ></span>
+                        <span id="current-score">0</span>
                       </button>
                 </div>
             </div>
         </section>
         <!-- playground screen end  -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <section id="scoreSection" class="flex justify-center items-center min-h-screen hidden">
             <div class="text-center gap-10 space-y-6 bg-[#ffffff33] p-10 rounded-xl">
                 <h1 class="text-7xl text-white">
                     <span class="font-extrabold">Score:</span>
-                    <span>14</span>
+                    <span id="live-score">14</span>
                 </h1>
-                <button class="btn ">Play Again</button>
+                <button onclick="play()" class="btn ">Play Again</button>
                 <p class="text-white text-xl">Practice make you a Pro</p>
             </div>
         </section>
